# stibium

./: .gitattributes  .gitignore  ATTRIBUTIONS.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  TODO.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/app/: app.cpp  app.h  colors.cpp  colors.h  main.cpp  settings.cpp  settings.h  theme.cpp  theme.h  vm_import.cpp  vm_import.h
app/canvas/: add_node_popup.cpp  add_node_popup.h  canvas_view.cpp  canvas_view.h  datum_port.cpp  scene.h
app/canvas/connection/: base.cpp  base.h  connection.cpp  dummy.cpp  dummy.h
app/canvas/inspector/: export.h  frame.cpp  frame.h  title.cpp  title.h
app/dialog/: animation_dialog.cpp  animation_dialog.h  exporting.cpp  exporting.h  exporting_dialog.ui  render_image_dialog.cpp  render_image_dialog.h  resolution.cpp  resolution.h  resolution_dialog.ui
app/export/: export_heightmap.cpp  export_heightmap.h  export_image.cpp  export_image.h  export_mesh.cpp  export_mesh.h  export_svg.cpp  export_svg.h  export_worker.cpp  export_worker.h  gif_writer.cpp  gif_writer.h
app/gl/: enhanced.frag  gl.qrc
app/graph/constructor/: populate.cpp  populate.h
app/graph/hooks/: export.cpp  export.h  hooks.cpp
app/graph/proxy/: graph.h  node.cpp  node.h
app/graph/serialize/: deserializer.cpp  serializer.cpp
app/script/: editor.cpp  frame.cpp
app/viewport/: gl.cpp  gl.h  image.cpp  image.h  view.cpp  view.h
app/viewport/render/: instance.cpp  instance.h  task.cpp  task.h
app/window/: base.cpp  base_viewport_window.cpp  base_viewport_window.h  base_window.ui  canvas.cpp
deploy/linux/thumbnailer/: README.md  stibium-mime.xml  stibium.thumbnailer
doc/: AGENT-SURFACE.md  DELAUNAY-MESHER.md  FOREIGN-IMPORT.md  LIBFIVE-RECON.md  LIBRARY-ROADMAP.md  MESH-NEXT.md  MESH-REVISIONS.md  MESH-WAR.md  TAPE-DESIGN.md  TAPE-NEXT.md  UI-MODERNIZATION.md  UPSTREAM-NOTES.md
doc/reviews/: 2026-07-17-architecture.md  2026-07-17-correctness.md  2026-07-17-performance.md  2026-07-17-quadric-assessment.md  2026-07-18-bino-hygiene-autopsy.md  2026-07-18-correctness-round2.md  2026-07-18-guarantees-research.md  2026-07-18-interval-certify-reach-locus.md  2026-07-18-perf-round3-design.md  2026-07-18-prusa-internals.md  2026-07-18-quality-research.md  2026-07-18-vendor-catch.md  2026-07-18-vendor-eigen.md
examples/: detail_spacing_test.sb  detail_spacing_test_cyl.sb  import_bead.sb  selectric_typeball.sb  showcase_gear.sb
examples/mesh_bench/: emboss_0_5mm.sb  emboss_1mm.sb  emboss_2mm.sb  engrave_0_5mm.sb  engrave_1mm.sb  engrave_2mm.sb  stacked_cone_cylinder_torus_lip.sb  stacked_cylinders.sb  stacked_cylinders_torus_lip.sb  stacked_cylinders_torus_lip_off_axis.sb
examples/meshes/: pebble.stl
examples/torture/: engraved_text.sb  zeiss_id02_bino.sb  zeiss_id02_bino_extract.sb  zeiss_id02_bino_extract_tilt.sb  zeiss_id02_knob.sb  zeiss_id02_lamp.sb  zeiss_id02_merged.sb  zeiss_id02_plinth.sb  zeiss_id02_screws.sb  zeiss_id02_screws_extended.sb
examples/vm/: capsule.vm  quarter.vm
lib/fab/: CMakeLists.txt
lib/fab/inc/fab/: fab.h
lib/fab/inc/fab/formats/: dxf.h  stl.h  svg.h  threemf.h
lib/fab/inc/fab/mesh/: glyph_import.h  mesh_import.h  mesh_query.h  trimesh.h
lib/fab/inc/fab/tree/: analytics.h  contour.h  gpu.h  grid.h  parallel_eval.h  render.h  render_mt.h  tape.h  tree.h  triangulate.h
lib/fab/inc/fab/tree/math/: math_f.h  math_g.h  math_i.h  math_r.h
lib/fab/inc/fab/tree/node/: node.h  opcodes.h
lib/fab/inc/fab/tree/triangulate/: delaunay.h  mesher.h  triangle.h
lib/fab/inc/fab/types/: shape.h
lib/fab/src/: fab.cpp
lib/fab/src/formats/: dxf.cpp  stl.c  svg.cpp  threemf.cpp
lib/fab/src/mesh/: glyph_import.cpp  mesh_import.cpp  mesh_query.cpp  trimesh.cpp
lib/fab/src/tree/: analytics.cpp  contour.cpp  eval.c  gpu.cpp  grid.cpp  parallel_eval.cpp  parser.c  render.c  render_mt.cpp  tape.cpp  tree.c  triangulate.cpp  v2parser.cpp  v2syntax.l  v2syntax.y
lib/fab/src/tree/math/: math_f.c  math_g.c  math_i.c  math_r.c
lib/fab/src/tree/node/: node_c.c  opcodes.c  printers.c  printers_ss.cpp
lib/fab/src/tree/triangulate/: delaunay.cpp  mesher.cpp
lib/fab/src/types/: shape.cpp
lib/fab/src/util/: region.c
lib/fab/tests/: aa.cpp  analytics.cpp  contour.cpp  dmesh.cpp  gpu.cpp  grid.cpp  mesh.cpp  mesher.cpp  parser.cpp  tape.cpp
lib/graph/: CMakeLists.txt
lib/graph/src/: util.cpp
py/fab/: shapes.py
py/fonts/: README.md
py/nodes/2D/: annulus.node  arc.node  bezier_quad.node  crescent.node  cross.node  ellipse.node  oriented_box.node  pie.node  polygon_points.node  polyline.node  rhombus.node  segment.node  star.node  text_font.node  trapezoid.node  vesica.node
py/nodes/2D/Rectangles/: rectangle_exact.node
py/nodes/3D/Cones/: capped_cone_z.node
py/nodes/Array/: iterate_scaled.node
py/nodes/CSG/: chamfer_difference.node  chamfer_intersection.node  chamfer_union.node  fillet_difference.node  fillet_intersection.node  fillet_union.node  smooth_difference.node  smooth_union.node
py/nodes/Checks/: check_clearance.node  check_fits.node  check_volume.node
py/nodes/Deform/: bend_x.node  bend_y.node  elongate.node  revolve_z.node  twirl_x.node  twirl_y.node  twirl_z.node
py/nodes/Export/: export_svg.node
py/nodes/Import/: import_mesh.node
py/nodes/Mirror/: mirror_x.node  mirror_xy.node  mirror_xz.node  mirror_y.node  mirror_yz.node  mirror_z.node
py/nodes/Parts/: clearance_hole.node  counterbore_hole.node  countersink_hole.node  dovetail.node  heatset_boss.node  lid_lip.node  nut_trap_hex.node  rack.node  snap_clip.node  spur_gear.node  standoff_pcb.node  tapped_hole.node  teardrop_hole.node  thread_rod.node  vent_grille_hex.node
py/nodes/Repeat/: repeat_mirror_x.node  repeat_mirror_y.node  repeat_polar.node  repeat_scale.node  repeat_x.node  repeat_x_finite.node  repeat_xy.node  repeat_y.node  repeat_y_finite.node  repeat_z.node
tools/: areamap.py  cyl_referee.py  fightpix.py  idxedges.py  ladder_referee.py  openedges_exact.py  overlaps.py  peak.py  quiltdens.py  razors.py  sheets.py  tilt.py
(+13 files in other folders)
